# ChangeLog for net-irc/supybot
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/supybot/ChangeLog,v 1.30 2009/08/05 21:19:00 maekke Exp $

  05 Aug 2009; Markus Meier <maekke@gentoo.org> supybot-0.83.4.1.ebuild:
  x86 stable, bug #279404

*supybot-0.83.4.1 (28 Jun 2009)

  28 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -supybot-0.83.4.ebuild, +supybot-0.83.4.1.ebuild:
  Version bump.

*supybot-0.83.4 (22 May 2009)

  22 May 2009; Jim Ramsay <lack@gentoo.org> +supybot-0.83.4.ebuild:
  Version bump: 0.83.4 works with python-2.6

  27 Feb 2008; Sven Wegener <swegener@gentoo.org> -supybot-0.83.2.ebuild:
  Cleanup.

  20 Feb 2008; Raúl Porcel <armin76@gentoo.org> supybot-0.83.3.ebuild:
  x86 stable

*supybot-0.83.3 (04 Dec 2007)

  04 Dec 2007; Ali Polatel <hawking@gentoo.org> +supybot-0.83.3.ebuild:
  Version bump.

  30 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing liquidx from metadata due to his retirement (see #171155 for
  reference).

  06 May 2007; Marius Mauch <genone@gentoo.org> supybot-0.83.2.ebuild:
  Replacing einfo with elog

  05 May 2007; Tiziano Müller <dev-zero@gentoo.org>
  -files/supybot-0.77.0-setup.py.patch, -supybot-0.83.1.ebuild:
  Dropped old version and old patch.

  20 Feb 2007; Raúl Porcel <armin76@gentoo.org> supybot-0.83.2.ebuild:
  x86 stable

  30 Dec 2006; Tiziano Müller <dev-zero@gentoo.org> -supybot-0.77.2.ebuild:
  Dropped old version.

  30 Dec 2006; Fabian Groffen <grobian@gentoo.org> supybot-0.77.2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  25 Sep 2006; Javier Villavicencio <the_paya@gentoo.org>
  supybot-0.83.2.ebuild:
  Added ~x86-fbsd keyword.

  31 Aug 2006; Thomas Cort <tcort@gentoo.org> supybot-0.83.2.ebuild:
  Added ~amd64 wrt Bug #145138.

  22 Aug 2006; Alastair Tse <liquidx@gentoo.org> supybot-0.77.2.ebuild,
  -supybot-0.80.1.ebuild, -supybot-0.83.0_rc3.ebuild: