@@ -1,6 +1,7 @@
 DIST Supybot-0.83.3.tar.bz2 382114 RMD160 f8f2fff7fb406d12c499cf6b974227e47c9907f1 SHA1 daa07fae5377234b599ec839012f03c0b8c491c4 SHA256 5689325a20b71d1d652f17bdc3eacdaf012a5c885831f9998c161c09d39d5810
 DIST Supybot-0.83.4.1.tar.bz2 557969 RMD160 19fe768a0d814e902467f7e5aee31c04a3ab0024 SHA1 e9a0443557c82f983c6144d238a28d2ca83dc2d3 SHA256 c4fccaccb53226a5bede1eaa5ea941a8aa53196ce5278a697daf37bd554372fb
 EBUILD supybot-0.83.3.ebuild 952 RMD160 48667d4593bf04213916192170464d75ab59dfd8 SHA1 f56ccef7ee45c5a44c45aad0c80c0da0ad75575f SHA256 5204bd00895203f5559ec8c44161f3a22d7b52ed7086883cf40cb5a46e0d952a
+EBUILD supybot-0.83.4.1-r1.ebuild 1429 RMD160 dfbb52043154c4796ad61d2cdf927b3736ab8b72 SHA1 eaef0327412c39f28ea9c512098c23e8d417d740 SHA256 89f0c35c57ce36a1b0cc5e78049d20ff629fca89d63d62903be0d26c01eabcef
 EBUILD supybot-0.83.4.1.ebuild 993 RMD160 82a50142697a0f57d9ef2cd5751f49267223b7b1 SHA1 e2fa46d39e0d5dee250605d1babe609eadab61df SHA256 114f708a63e38bb422ecf9ac8db9f2fa659bc63e7ccb1e498ee4a967fe6f7a73
-MISC ChangeLog 4317 RMD160 7b35d4f70b8349e4eb55e465966cf733e5c7e596 SHA1 9e48e5c226274646c2e7ffa07e755037fcbcd68f SHA256 82227f598a004a8ae26ecf8daa11c78e2c729dbf24e7e2ed257e67a281c14370
-MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
+MISC ChangeLog 4513 RMD160 f6115879c71e2d99d1bd7ebccdc1ce344d387bd9 SHA1 40f896c31603b869c7d9c927fa92728f58726524 SHA256 979bba6e725f30b64476cc63de5d85932bc4b7036ff0e261d9503058b998c6bd
+MISC metadata.xml 267 RMD160 8d35b248e0672993390bcc362995e97abb3cf92e SHA1 83caf37ffcd02c36ceba9df1c414861523e9cd9b SHA256 243c6ef40c5dd1ac17a202b703d1710aad0a970673f7907b1f93360b48b5dd7a
