@@ -2,4 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>python</herd>
+	<use>
+		<flag name="twisted">Allows supybot to use <pkg>dev-python/twisted</pkg> as driver</flag>
+	</use>
 </pkgmetadata>
