@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/supybot
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/supybot/ChangeLog,v 1.30 2009/08/05 21:19:00 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/supybot/ChangeLog,v 1.31 2009/09/21 00:07:34 neurogeek Exp $
+
+*supybot-0.83.4.1-r1 (21 Sep 2009)
+
+  21 Sep 2009; Jesus Rivero <neurogeek@gentoo.org>
+  +supybot-0.83.4.1-r1.ebuild:
+  Added twisted USE flag, dev-python/twisted-names as DEP wrt bug #225657
 
   05 Aug 2009; Markus Meier <maekke@gentoo.org> supybot-0.83.4.1.ebuild:
   x86 stable, bug #279404
